manifests/manufacturing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdo-manufacturing-deployment
  namespace: fdo-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdo-manufacturing
  template:
    metadata:
      labels:
        app: fdo-manufacturing
    spec:
      containers:
      - name: fdo-manufacturing-server
        image: 192.168.130.1:5000/fdo-manufacturing-server:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/fdo/manufacturing-server.conf.d
          readOnly: true
        - name: ownership-vouchers
          mountPath: /etc/fdo/ownership_vouchers
        - name: diun-key
          mountPath: /etc/fdo/keys/diun_key.der
          subPath: diun_key.der
          readOnly: true
        - name: diun-cert
          mountPath: /etc/fdo/keys/diun_cert.pem
          subPath: diun_cert.pem
          readOnly: true
        - name: manufacturer-cert
          mountPath: /etc/fdo/keys/manufacturer_cert.pem
          subPath: manufacturer_cert.pem
          readOnly: true
        - name: manufacturer-key
          mountPath: /etc/fdo/keys/manufacturer_key.der
          subPath: manufacturer_key.der
          readOnly: true
        - name: owner-cert
          mountPath: /etc/fdo/keys/owner_cert.pem
          subPath: owner_cert.pem
          readOnly: true
        - name: device-ca-key
          mountPath: /etc/fdo/keys/device_ca_key.der
          subPath: device_ca_key.der
          readOnly: true
        - name: device-ca-chain
          mountPath: /etc/fdo/keys/device_ca_cert.pem
          subPath: device_ca_cert.pem
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: fdo-manufacturing-config
      - name: diun-key
        secret:
          secretName: fdo-diun-key
          items:
            - key: diun_key.der
              path: diun_key.der
          optional: false
      - name: diun-cert
        secret:
          secretName: fdo-diun-cert
          items:
          - key: diun_cert.pem
            path: diun_cert.pem
          optional: false
      - name: manufacturer-cert
        secret:
          secretName: fdo-manufacturer-cert
          items:
          - key: manufacturer_cert.pem
            path: manufacturer_cert.pem
          optional: false
      - name: manufacturer-key
        secret:
          secretName: fdo-manufacturer-key
          items:
          - key: manufacturer_key.der
            path: manufacturer_key.der
          optional: false
      - name: owner-cert
        secret:
          secretName: fdo-owner-cert
          items:
          - key: owner_cert.pem
            path: owner_cert.pem
          optional: false
      - name: device-ca-key
        secret:
          secretName: fdo-device-ca-key
          items:
          - key: device_ca_key.der
            path: device_ca_key.der
          optional: false
      - name: device-ca-chain
        secret:
          secretName: fdo-device-ca-cert
          items:
          - key: device_ca_cert.pem
            path: device_ca_cert.pem
          optional: false
      - name: ownership-vouchers
        persistentVolumeClaim:
          claimName: ownership-vouchers-pvc
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: fdo-manufacturing-service
  namespace: fdo-operator
spec:
  selector:
    app: fdo-manufacturing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fdo-manufacturing
  namespace: fdo-operator
spec:
  host: fdo-manufacturing.apps-crc.testing
  to:
    kind: Service
    name: fdo-manufacturing-service
  port:
    targetPort: 8080
  wildcardPolicy: None
