manifests/owner-onboarding.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdo-owner-onboarding-deployment
  namespace: fdo-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdo-owner-onboarding
  template:
    metadata:
      labels:
        app: fdo-owner-onboarding
    spec:
      containers:
      - name: fdo-owner-onboarding-server
        image: quay.io/vemporop/fdo-owner-onboarding-server:1.0
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
          - containerPort: 8081
        volumeMounts:
        - name: config
          mountPath: /etc/fdo/owner-onboarding-server.conf.d
          readOnly: true
        - name: ownership-vouchers
          mountPath: /etc/fdo/ownership_vouchers
        - name: owner-cert
          mountPath: /etc/fdo/keys/owner_cert.pem
          subPath: owner_cert.pem
          readOnly: true
        - name: owner-key
          mountPath: /etc/fdo/keys/owner_key.der
          subPath: owner_key.der
          readOnly: true
        - name: device-ca-chain
          mountPath: /etc/fdo/keys/device_ca_cert.pem
          subPath: device_ca_cert.pem
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: fdo-owner-onboarding-config
      - name: owner-cert
        secret:
          secretName: fdo-owner-cert
          items:
          - key: owner_cert.pem
            path: owner_cert.pem
          optional: false
      - name: owner-key
        secret:
          secretName: fdo-owner-key
          items:
          - key: owner_key.der
            path: owner_key.der
          optional: false
      - name: device-ca-chain
        secret:
          secretName: fdo-device-ca-cert
          items:
          - key: device_ca_cert.pem
            path: device_ca_cert.pem
          optional: false
      - name: ownership-vouchers
        persistentVolumeClaim:
          claimName: ownership-vouchers-pvc
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: fdo-owner-onboarding-service
  namespace: fdo-operator
spec:
  selector:
    app: fdo-owner-onboarding
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fdo-owner-onboarding
  namespace: fdo-operator
spec:
  host: fdo-owner-onboarding.apps-crc.testing
  to:
    kind: Service
    name: fdo-owner-onboarding-service
  port:
    targetPort: 8081
  wildcardPolicy: None
