manifests/serviceinfo-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdo-serviceinfo-api-deployment
  namespace: fdo-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdo-serviceinfo-api
  template:
    metadata:
      labels:
        app: fdo-serviceinfo-api
    spec:
      containers:
      - name: fdo-serviceinfo-api-server
        image: 192.168.130.1:5000/fdo-serviceinfo-api-server:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
          - containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /etc/fdo/serviceinfo-api-server.conf.d
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: fdo-serviceinfo-api-config
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: fdo-serviceinfo-api-service
  namespace: fdo-operator
spec:
  selector:
    app: fdo-serviceinfo-api
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fdo-serviceinfo-api
  namespace: fdo-operator
spec:
  host: fdo-serviceinfo-api.apps-crc.testing
  to:
    kind: Service
    name: fdo-serviceinfo-api-service
  port:
    targetPort: 8083
  wildcardPolicy: None
